# code_exec_platform

./: .env  Dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: aac8641c407e_added_user_table.py
auth/: backend.py  depends.py  routers.py  user_manager.py
db/: database.py  types.py
models/: base.py  execute_request.py  execute_result.py  problem.py  user.py
schemas/: user.py
utils/: datetime_utils.py
